# app_testing

./: .gitignore  AGENTS.md
player/: README.md  pyproject.toml
player/src/: main.py  state.py
player/src/views/: home_view.py  player_view.py
