[project]
name = "player"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5"
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.mycompany"
product = "player"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
